      patch: Closes: #541408, #542119
  * reportbug/utils.py
    - 'ldap' and 'no-ldap' options now issue a "Unrecognized token" warning:
       LDAP support is gone since years; thanks to martin f krafft for the
       report; Closes: #271057

  [ Luca Bruno ]
  * reportbug/ui/gtk_ui.py
    - wrap words when editing bug reports
    - workaround possible GTK+ regression to show the intro page

 -- Luca Bruno <lethalman88@gmail.com>  Mon, 31 Aug 2009 11:39:04 +0200

reportbug (4.6) unstable; urgency=low

  * reportbug/__init__.py
    - bump reportbug version
  * bin/querybts
    - allows to specify multiple bugs number with --mbox; thanks to Trent Buck
      for the report and Carl Chenet for the patch: Closes: #427560
  * reportbug/submit.py
    - added support for gnupg-agent with signing emails; thanks to Mathias
      Brodala or the report and Carl Chenet for the patch: Closes: #435818
  * bin/reportbug
    - allow ENTER to exit from file detaching menu (and enforced file checking);
      thanks to Rodrigo Campos for report and (partial) patch; Closes: 535789
    - do not exit if no subject is entered for new bugs, but keep asking it;
      thanks to Olaf van der Spek for the report and Carl Chenet for the patch;
      Closes: #537449
    - do not exit if no subject is entered for additional information, but keep
      asking it; thanks to Carl Chenet for the report and patch: Closes: #537624
    - configuration asks also if 'smtptls' is needed or not; thanks to Jerome
      Reybert for the report; Closes: #538021
    - allow to add tags to the bug even in the last menu (right before sending);
      thanks to Enrico Zini for the report and Carl Chenet for the patch;
      Closes: #304006
  * bin/querybts, man/querybts.1, reportbug/ui/text_ui.py
    - querybts is now able to handle multiple bug numbers, package names or any
      mix of them when using --mbox option; thanks to Carl Chenet for the report
      and patch; Closes: #535560